[metadata]
name = giftwrap-plugins
summary = giftwrap-plugins - plugins for giftwrap
description-file =
    README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/blueboxgroup/giftwrap-plugins
include_package_data = True
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
giftwrap.builder.plugins =
    package-meta = giftwrap_plugins.builders.package_meta:PackageMetaBuilder

[files]
packages =
    giftwrap_plugins
